Source/WebCore/style/StyleBuilderCustom.h
@@ -127,12 +127,16 @@ public:
     static void applyInheritDisplay(BuilderState&);
     static void applyValueDisplay(BuilderState&, CSSValue&);
     // FIXME: <https://webkit.org/b/212506> Teach makeprop.pl to generate setters for hasExplicitlySet* flags
+    static void applyInitialBorderBottomLeftRadius(BuilderState&);
     static void applyInheritBorderBottomLeftRadius(BuilderState&);
     static void applyValueBorderBottomLeftRadius(BuilderState&, CSSValue&);
+    static void applyInitialBorderBottomRightRadius(BuilderState&);
     static void applyInheritBorderBottomRightRadius(BuilderState&);
     static void applyValueBorderBottomRightRadius(BuilderState&, CSSValue&);
+    static void applyInitialBorderTopLeftRadius(BuilderState&);
     static void applyInheritBorderTopLeftRadius(BuilderState&);
     static void applyValueBorderTopLeftRadius(BuilderState&, CSSValue&);
+    static void applyInitialBorderTopRightRadius(BuilderState&);
     static void applyInheritBorderTopRightRadius(BuilderState&);
     static void applyValueBorderTopRightRadius(BuilderState&, CSSValue&);
 
@@ -1084,52 +1088,76 @@ inline void BuilderCustom::applyValueFontFamily(BuilderState& builderState, CSSV
     builderState.setFontDescription(WTFMove(fontDescription));
 }
 
+inline void BuilderCustom::applyInitialBorderBottomLeftRadius(BuilderState& builderState)
+{
+    builderState.style().setBorderBottomLeftRadius(RenderStyle::initialBorderRadius());
+    builderState.style().setHasExplicitlySetBorderBottomLeftRadius(false);
+}
+
 inline void BuilderCustom::applyInheritBorderBottomLeftRadius(BuilderState& builderState)
 {
     builderState.style().setBorderBottomLeftRadius(forwardInheritedValue(builderState.parentStyle().borderBottomLeftRadius()));
-    builderState.style().setHasExplicitlySetBorderRadius(builderState.parentStyle().hasExplicitlySetBorderRadius());
+    builderState.style().setHasExplicitlySetBorderBottomLeftRadius(builderState.parentStyle().hasExplicitlySetBorderBottomLeftRadius());
 }
 
 inline void BuilderCustom::applyValueBorderBottomLeftRadius(BuilderState& builderState, CSSValue& value)
 {
     builderState.style().setBorderBottomLeftRadius(BuilderConverter::convertRadius(builderState, value));
-    builderState.style().setHasExplicitlySetBorderRadius(true);
+    builderState.style().setHasExplicitlySetBorderBottomLeftRadius(true);
+}
+
+inline void BuilderCustom::applyInitialBorderBottomRightRadius(BuilderState& builderState)
+{
+    builderState.style().setBorderBottomRightRadius(RenderStyle::initialBorderRadius());
+    builderState.style().setHasExplicitlySetBorderBottomRightRadius(false);
 }
 
 inline void BuilderCustom::applyInheritBorderBottomRightRadius(BuilderState& builderState)
 {
     builderState.style().setBorderBottomRightRadius(forwardInheritedValue(builderState.parentStyle().borderBottomRightRadius()));
-    builderState.style().setHasExplicitlySetBorderRadius(builderState.parentStyle().hasExplicitlySetBorderRadius());
+    builderState.style().setHasExplicitlySetBorderBottomRightRadius(builderState.parentStyle().hasExplicitlySetBorderBottomRightRadius());
 }
 
 inline void BuilderCustom::applyValueBorderBottomRightRadius(BuilderState& builderState, CSSValue& value)
 {
     builderState.style().setBorderBottomRightRadius(BuilderConverter::convertRadius(builderState, value));
-    builderState.style().setHasExplicitlySetBorderRadius(true);
+    builderState.style().setHasExplicitlySetBorderBottomRightRadius(true);
+}
+
+inline void BuilderCustom::applyInitialBorderTopLeftRadius(BuilderState& builderState)
+{
+    builderState.style().setBorderTopLeftRadius(RenderStyle::initialBorderRadius());
+    builderState.style().setHasExplicitlySetBorderTopLeftRadius(false);
 }
 
 inline void BuilderCustom::applyInheritBorderTopLeftRadius(BuilderState& builderState)
 {
     builderState.style().setBorderTopLeftRadius(forwardInheritedValue(builderState.parentStyle().borderTopLeftRadius()));
-    builderState.style().setHasExplicitlySetBorderRadius(builderState.parentStyle().hasExplicitlySetBorderRadius());
+    builderState.style().setHasExplicitlySetBorderTopLeftRadius(builderState.parentStyle().hasExplicitlySetBorderTopLeftRadius());
 }
 
 inline void BuilderCustom::applyValueBorderTopLeftRadius(BuilderState& builderState, CSSValue& value)
 {
     builderState.style().setBorderTopLeftRadius(BuilderConverter::convertRadius(builderState, value));
-    builderState.style().setHasExplicitlySetBorderRadius(true);
+    builderState.style().setHasExplicitlySetBorderTopLeftRadius(true);
+}
+
+inline void BuilderCustom::applyInitialBorderTopRightRadius(BuilderState& builderState)
+{
+    builderState.style().setBorderTopRightRadius(RenderStyle::initialBorderRadius());
+    builderState.style().setHasExplicitlySetBorderTopRightRadius(false);
 }
 
 inline void BuilderCustom::applyInheritBorderTopRightRadius(BuilderState& builderState)
 {
     builderState.style().setBorderTopRightRadius(forwardInheritedValue(builderState.parentStyle().borderTopRightRadius()));
-    builderState.style().setHasExplicitlySetBorderRadius(builderState.parentStyle().hasExplicitlySetBorderRadius());
+    builderState.style().setHasExplicitlySetBorderTopRightRadius(builderState.parentStyle().hasExplicitlySetBorderTopRightRadius());
 }
 
 inline void BuilderCustom::applyValueBorderTopRightRadius(BuilderState& builderState, CSSValue& value)
 {
     builderState.style().setBorderTopRightRadius(BuilderConverter::convertRadius(builderState, value));
-    builderState.style().setHasExplicitlySetBorderRadius(true);
+    builderState.style().setHasExplicitlySetBorderTopRightRadius(true);
 }
 
 inline bool BuilderCustom::isValidDisplayValue(BuilderState& builderState, DisplayType display)
